--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,6 @@ jobs:
           # CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.ELVUI_ENHANCED_AGAIN_RELEASE }}
           # WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-          # WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
+          WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
         # with:
         #   args: -w 0 -p 0
